# affogato

./: .gitignore  CLAUDE.md  Makefile  README.md
.github/workflows/: ci.yml  docker.yml  homebrew.yml  release.yml
cli/: Cargo.toml
cli/src/: build.rs  config.rs  demo.rs  docker.rs  main.rs  project.rs  test.rs  watch.rs
components/ice40/: CMakeLists.txt  Kconfig  fpga_loader.c  master_spi.c
components/ice40/include/: ice40.h
components/ice40/include/ice40/: fpga_bin.h  fpga_loader.h  master_spi.h
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: boot-process.md  future-ideas.md
examples/colorwheel/: Makefile  README.md  affogato.toml
examples/colorwheel/firmware/: CMakeLists.txt  sdkconfig.defaults
examples/colorwheel/firmware/main/: CMakeLists.txt  main.c
examples/colorwheel/fpga/: Makefile  project.pcf
examples/colorwheel/fpga/rtl/: top.v
examples/web-led/: Makefile  README.md  affogato.toml
examples/web-led/firmware/: CMakeLists.txt  sdkconfig.defaults
examples/web-led/firmware/main/: CMakeLists.txt  main.c
examples/web-led/fpga/: Makefile  project.pcf
examples/web-led/fpga/rtl/: pwm.v  spi_rgb_slave.v  top.v
fpga/: Makefile  iced-espresso.pcf
fpga/rtl/: edge_detect.v  rgb_led_driver.v  spi_slave_bulk.v  spi_slave_reg.v  sync_ff.v  toggle_to_strobe.v
homebrew/: affogato.rb
templates/firmware/: CMakeLists.txt  sdkconfig.defaults
templates/firmware/main/: CMakeLists.txt  main.c
templates/fpga/: Makefile  project.pcf
templates/fpga/rtl/: top.v
